# ANNC

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ANNC.sln  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  domain_lib.vcxproj  domain_lib.vcxproj.filters  fterm_lib.vcxproj  fterm_lib.vcxproj.filters  interp1D_cpp.vcxproj  interp1D_cpp.vcxproj.filters  nn_lib.vcxproj  nn_lib.vcxproj.filters  optimizer_lib.vcxproj  optimizer_lib.vcxproj.filters  poisson2D_cpp.vcxproj  poisson2D_cpp.vcxproj.filters  scheduler_lib.vcxproj  scheduler_lib.vcxproj.filters  tCClassification_cpp.vcxproj  tCClassification_cpp.vcxproj.filters  utils_lib.vcxproj  utils_lib.vcxproj.filters  vectorfield2D_cpp.vcxproj  vectorfield2D_cpp.vcxproj.filters
data/: learning_data.txt  prediction_data.txt  tranning_data.txt  tranning_data22.txt
data/22 clasificaciones/: learning_data.txt  prediction_data.txt  tranning_data22.txt
doc/presentacion_INFOTEC_Febrero_2023/: Diagram1.dia  Untitled.TuVtKf  _region_.tex  main.aux  main.bcf  main.nav  main.out  main.run.xml  main.snm  main.tex  main.toc  references.bib  smile_styles.tex
examples/interp1D/: interp1D.cpp
examples/interp1D/pytorch/: interp1D.py  interp1DWbM.py  interp1D_30Ags.py  test1.py  test2.py
examples/poisson2D/: poisson2D.cpp
examples/poisson2D/matlab/: graph.m  laplaciano.m
examples/poisson2D/pytorch/: 2dpoisson_square2.py  2dpoisson_square3.py
examples/tCClassification/: tCClassification.cpp
examples/tCClassification/pytorch/: HighamAndHigham_pytorch.py
examples/vectorfield2D/: vectorfield2D.cpp
include/domain/: Domain.h  Rectangle.h  ThreeDimDomain.hpp  TwoDimDomain.h
include/fterm/: FTerm.h
include/fterm/interp1D/: LSTerm.hpp
include/fterm/lst/: LSTerm.h
include/fterm/poisson2D/: BdyTerm.hpp  DivTerm.hpp
include/fterm/vectorfield2D/: BdyTerm.hpp  DivTerm.hpp  LSTerm.hpp
include/nn/: NeuralNetwork.h  NeuralNetworkPy.hpp
include/optimizer/: Adam.hpp  Optimizer.hpp
include/scheduler/: Scheduler.hpp
include/utils/: ActivationFunctions.hpp  DataTypes.hpp  GNUplot.h  Gen2DData.h  ReadFile.h  WriteFile.h
interp1D_cpp.dir/MinSizeRel/interp1D_cpp.tlog/: CustomBuild.read.1.tlog
lib/MinSizeRel/: utils_lib.lib
nn_lib.dir/MinSizeRel/: nn_lib.lib.recipe
src/domain/: Rectangle.cpp
src/fterm/: FTerm.cpp
src/fterm/interp1D/: LSTerm.cpp
src/fterm/lst/: LSTerm.cpp
src/fterm/poisson2D/: BdyTerm.cpp  DivTerm.cpp
src/fterm/vectorfield2D/: BdyTerm.cpp  DivTerm.cpp  LSTerm.cpp
src/nn/: NeuralNetwork.cpp  NeuralNetworkPy.cpp
src/optimizer/: Adam.cpp
src/scheduler/: Scheduler.cpp
src/utils/: ActivationFunctions.cpp  Gen2DData.cpp  ReadFile.cpp  WriteFile.cpp
tCClassification_cpp.dir/MinSizeRel/: tCClassification_cpp.exe.recipe
tCClassification_cpp.dir/MinSizeRel/tCCGener.29FC3E65.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tCClassification_cpp.dir/MinSizeRel/tCClassi.0D8F0B55.tlog/: CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.read.1.tlog  link.write.1.tlog
tCClassification_cpp.dir/MinSizeRel/tCClassi.29FC3E65.tlog/: CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  tCClassification_cpp.lastbuildstate
utils_lib.dir/MinSizeRel/utils_lib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
vectorfield2D_cpp.dir/MinSizeRel/: vectorfield2D_cpp.exe.recipe
vectorfield2D_cpp.dir/MinSizeRel/vectorfi.6A24B6AC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
